# bitwi2dl

./: .gitignore  CMakeLists.txt  README.md  activator.cpp  main.cpp  sslinstall.cpp
inc/: HTTPRequest.hpp  getosname.h
